--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "miniagent-poetry-pyenv",
+    "name": "skyagent-poetry-pyenv",
     "build": {
         "dockerfile": "Dockerfile"
     },
