--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 pydantic = "^2.10.4"
 docstring-parser = "^0.16"
 rich = "^13.9.4"
+anthropic = "^0.43.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
