--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^2.10.4"
 docstring-parser = "^0.16"
 rich = "^13.9.4"
 anthropic = "^0.43.0"
+pexpect = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
