Structured outputs, and logger fixes.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,8 +19,5 @@
             }
         }
     },
-    "remoteUser": "root",
-    // "mounts": [
-    //     "type=bind,source=/${localEnv:HOME}/.ssh,target=/root/.ssh,readonly"
-    // ]
+    "remoteUser": "root"
 }
