--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,10 +20,19 @@ jobs:
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
+        export PATH="/github/home/.local/bin:$PATH"
+        poetry --version
         poetry config virtualenvs.create false
+      shell: bash
 
     - name: Install dependencies
-      run: poetry install --no-interaction --no-root
+      run: |
+        export PATH="/github/home/.local/bin:$PATH"
+        poetry install --no-interaction --no-root
+      shell: bash
 
     - name: Run Black formatter
-      run: poetry run black . --check
+      run: |
+        export PATH="/github/home/.local/bin:$PATH"
+        poetry run black . --check
+      shell: bash
