--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ docstring-parser = "^0.16"
 rich = "^13.9.4"
 anthropic = "^0.43.0"
 pexpect = "^4.9.0"
+pytest-asyncio = "^0.25.3"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
@@ -25,6 +26,7 @@ deptry = "^0.21.1"
 pipdeptree = "^2.24.0"
 vulture = "^2.13"
 mkdocs = "^1.6.1"
+pytest-asyncio = "^0.25.3"
 
 [build-system]
 requires = ["poetry-core"]
