--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,3 +96,14 @@ exclude = [
     "test/",
     "assets/"
 ]
+
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "src"
+]
+minversion = "6.0"
+addopts = "-ra -q -s"
+testpaths = [
+    "tests",
+]
