--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,13 @@ docstring-parser = "^0.16"
 rich = "^13.9.4"
 anthropic = "^0.43.0"
 pexpect = "^4.9.0"
-pytest-asyncio = "^0.25.3"
+googlesearch-python = "^1.3.0"
+html2text = "^2024.2.26"
+identify = "^2.6.7"
+python-docx = "^1.1.2"
+openpyxl = "^3.1.5"
+python-pptx = "^1.0.2"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
@@ -22,10 +28,6 @@ notebook = "^7.2.2"
 ruff = "^0.7.2"
 mypy = "^1.13.0"
 pytest = "^8.3.3"
-deptry = "^0.21.1"
-pipdeptree = "^2.24.0"
-vulture = "^2.13"
-mkdocs = "^1.6.1"
 pytest-asyncio = "^0.25.3"
 vcrpy = "^7.0.0"
 
