--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,9 @@ python-docx = "^1.1.2"
 openpyxl = "^3.1.5"
 python-pptx = "^1.0.2"
 pandas = "^2.2.3"
+pymupdf = "^1.25.3"
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "^6.29.5"
-notebook = "^7.2.2"
 ruff = "^0.7.2"
 mypy = "^1.13.0"
 pytest = "^8.3.3"
